[workspace]
members = [
    "bittorrent/actor",
    "bittorrent/base",
    "bittorrent/bencode",
    "bittorrent/dht",
    "bittorrent/extension",
    "bittorrent/manager",
    "bittorrent/metainfo",
    "bittorrent/mse",
    "bittorrent/peer",
    "bittorrent/socket",
    "bittorrent/storage",
    "bittorrent/tracker",
    "bittorrent/trackerless",
    "bittorrent/transceiver",
    "bittorrent/udp",
    "bittorrent/utp",
    "ddcache/bin/ddcached",
    "ddcache/client",
    "ddcache/client/raw",
    "ddcache/client/service",
    "ddcache/peer",
    "ddcache/rpc",
    "ddcache/server",
    "ddcache/storage",
    "dkvcache/bin/dkvcached",
    "dkvcache/client",
    "dkvcache/client/raw",
    "dkvcache/client/service",
    "dkvcache/peer",
    "dkvcache/rpc",
    "dkvcache/server",
    "dkvcache/storage",
    "etcd/client",
    "etcd/pubsub",
    "g1/base",
    "g1/base64",
    "g1/base_derive",
    "g1/bytes",
    "g1/bytes_derive",
    "g1/capnp",
    "g1/chrono",
    "g1/cli",
    "g1/futures",
    "g1/html",
    "g1/html/macros",
    "g1/hyper",
    "g1/msg",
    "g1/nix",
    "g1/param",
    "g1/reqwest",
    "g1/serde",
    "g1/serde_json",
    "g1/tokio",
    "g1/url",
    "g1/v8",
    "g1/web",
    "g1/zmq",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.68"
base64 = "0.22.0"
bitvec = "1.0.1"
bytes = "1.4.0"
capnp = "0.19.3"
capnpc = "0.19.0"
chrono = "0.4.26"
cipher = "0.4.4"
clap = { version = "4.3.1", features = ["derive"] }
crypto-bigint = { version = "0.5.2", features = ["generic-array", "zeroize"] }
console-subscriber = "0.1.10"
const_format = "0.2.32"
# The latest version of fasthash on crates.io is v0.4.0, but it is somewhat outdated.
fasthash = { git = "https://github.com/flier/rust-fasthash.git", rev = "ef0c52b4157af9a1a7d19b2a37658b6c26a6bea6" }
futures = "0.3.28"
hashbrown = "0.14.3"
heck = "0.4.1"
hex-literal = "0.4.1"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.6"
lazy-regex = "3.1.0"
libc = "0.2.147"
linkme = "0.3.10"
nix = "0.28.0"
paste = "1.0.12"
percent-encoding = "2.3.0"
proc-macro2 = "1.0.59"
quote = "1.0.28"
rand = "0.8.5"
rc4 = "0.1.0"
regex = "1.10.3"
reqwest = "0.12.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scopeguard = "1.2.0"
serde = "1.0.163"
serde-transcode = "1.1.1"
serde_bytes = "0.11.9"
serde_json = "1.0.96"
serde_with = "3.8.0"
# TODO: serde_yaml is no longer maintained; we should find an alternative.
serde_yaml = "0.9.34"
sha1 = { version = "0.10.5", features = ["asm"] }
snafu = "0.7.4"
syn = { version = "2.0.18", features = ["full"] }
tempfile = "3.8.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
trybuild = "1.0.80"
url = "2.5.0"
uuid = "1.8.0"
v8 = "130.0.0"
xattr = "1.3.1"
zmq = { git = "https://github.com/clchiou/rust-zmq.git", branch = "patch" }

bittorrent_actor = { path = "bittorrent/actor" }
bittorrent_base = { path = "bittorrent/base" }
bittorrent_bencode = { path = "bittorrent/bencode" }
bittorrent_dht = { path = "bittorrent/dht" }
bittorrent_extension = { path = "bittorrent/extension" }
bittorrent_manager = { path = "bittorrent/manager" }
bittorrent_metainfo = { path = "bittorrent/metainfo" }
bittorrent_mse = { path = "bittorrent/mse" }
bittorrent_peer = { path = "bittorrent/peer" }
bittorrent_socket = { path = "bittorrent/socket" }
bittorrent_storage = { path = "bittorrent/storage" }
bittorrent_tracker = { path = "bittorrent/tracker" }
bittorrent_trackerless = { path = "bittorrent/trackerless" }
bittorrent_transceiver = { path = "bittorrent/transceiver" }
bittorrent_udp = { path = "bittorrent/udp" }
bittorrent_utp = { path = "bittorrent/utp" }

ddcache_client = { path = "ddcache/client" }
ddcache_client_raw = { path = "ddcache/client/raw" }
ddcache_client_service = { path = "ddcache/client/service" }
ddcache_peer = { path = "ddcache/peer" }
ddcache_rpc = { path = "ddcache/rpc" }
ddcache_server = { path = "ddcache/server" }
ddcache_storage = { path = "ddcache/storage" }

dkvcache_client = { path = "dkvcache/client" }
dkvcache_client_raw = { path = "dkvcache/client/raw" }
dkvcache_client_service = { path = "dkvcache/client/service" }
dkvcache_peer = { path = "dkvcache/peer" }
dkvcache_rpc = { path = "dkvcache/rpc" }
dkvcache_server = { path = "dkvcache/server" }
dkvcache_storage = { path = "dkvcache/storage" }

etcd_client = { path = "etcd/client" }
etcd_pubsub = { path = "etcd/pubsub" }

g1_base = { path = "g1/base" }
g1_base64 = { path = "g1/base64" }
g1_base_derive = { path = "g1/base_derive" }
g1_bytes = { path = "g1/bytes" }
g1_bytes_derive = { path = "g1/bytes_derive" }
g1_capnp = { path = "g1/capnp" }
g1_chrono = { path = "g1/chrono" }
g1_cli = { path = "g1/cli" }
g1_futures = { path = "g1/futures" }
g1_html = { path = "g1/html" }
g1_html_macros = { path = "g1/html/macros" }
g1_hyper = { path = "g1/hyper" }
g1_msg = { path = "g1/msg" }
g1_nix = { path = "g1/nix" }
g1_param = { path = "g1/param" }
g1_reqwest = { path = "g1/reqwest" }
g1_serde = { path = "g1/serde" }
g1_serde_json = { path = "g1/serde_json" }
g1_tokio = { path = "g1/tokio" }
g1_url = { path = "g1/url" }
g1_v8 = { path = "g1/v8" }
g1_web = { path = "g1/web" }
g1_zmq = { path = "g1/zmq" }
