[workspace]
members = [
    "bittorrent/actor",
    "bittorrent/base",
    "bittorrent/bencode",
    "bittorrent/dht",
    "bittorrent/extension",
    "bittorrent/manager",
    "bittorrent/metainfo",
    "bittorrent/mse",
    "bittorrent/peer",
    "bittorrent/socket",
    "bittorrent/storage",
    "bittorrent/tracker",
    "bittorrent/trackerless",
    "bittorrent/transceiver",
    "bittorrent/udp",
    "bittorrent/utp",
    "bt/base",
    "bt/bencode",
    "bt/bin/bencode",
    "bt/bin/dhtutl",
    "bt/bin/metainfo",
    "bt/dht/lookup",
    "bt/dht/proto",
    "bt/dht/reqrep",
    "bt/dht/route",
    "bt/metainfo",
    "bt/serde",
    "bt/serde/attribute",
    "bt/udp",
    "ddcache/bin/ddcached",
    "ddcache/client",
    "ddcache/client/raw",
    "ddcache/client/service",
    "ddcache/peer",
    "ddcache/rpc",
    "ddcache/server",
    "ddcache/storage",
    "dkvcache/bin/dkvcached",
    "dkvcache/client",
    "dkvcache/client/raw",
    "dkvcache/client/service",
    "dkvcache/peer",
    "dkvcache/rpc",
    "dkvcache/server",
    "dkvcache/storage",
    "etcd/client",
    "etcd/pubsub",
    "etcd/watch",
    "g1/actor",
    "g1/actor/attribute",
    "g1/base",
    "g1/base/derive",
    "g1/base64",
    "g1/bytes",
    "g1/bytes/derive",
    "g1/cache",
    "g1/capnp",
    "g1/chrono",
    "g1/cli",
    "g1/futures",
    "g1/html",
    "g1/html/macro",
    "g1/hyper",
    "g1/msg",
    "g1/nix",
    "g1/param",
    "g1/pool",
    "g1/reqwest",
    "g1/rusqlite",
    "g1/scraper",
    "g1/serde",
    "g1/serde_json",
    "g1/tokio",
    "g1/udp",
    "g1/url",
    "g1/v8",
    "g1/web",
    "g1/yaml",
    "g1/zmq",
    "httpxd",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bitvec = "1.0.1"
bytes = "1.10.1"
capnp = "0.21.0"
capnpc = "0.21.0"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
console-subscriber = "0.4.1"
const_format = "0.2.34"
# TODO: We are staying on 0.5.x because 0.6.x has [migrated][1] from generic-array to hybrid-array,
# but rc4 0.1.0 has not yet migrated away from generic-array.
# [1]: https://github.com/RustCrypto/crypto-bigint/pull/544
crypto-bigint = { version = "0.5.5", features = ["generic-array", "zeroize"] }
# The latest version of fasthash on crates.io is v0.4.0, but it is somewhat outdated.
fasthash = { git = "https://github.com/flier/rust-fasthash.git", rev = "ef0c52b4157af9a1a7d19b2a37658b6c26a6bea6" }
futures = "0.3.31"
hashbrown = "0.15.3"
heck = "0.5.0"
hex-literal = "1.0.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = "0.1.11"
lazy-regex = "3.4.1"
libc = "0.2.172"
linkme = "0.3.32"
nix = "0.30.1"
paste = "1.0.15"
percent-encoding = "2.3.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
rc4 = "0.1.0"
regex = "1.11.1"
reqwest = "0.12.15"
rusqlite = { version = "0.35.0", features = ["bundled"] }
scopeguard = "1.2.0"
scraper = "0.23.1"
serde = "1.0.219"
serde-transcode = "1.1.1"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_with = "3.12.0"
# TODO: serde_yaml is no longer maintained, but we will continue using it for now, as serde_yaml_ng
# has not yet seen much further development.
serde_yaml = "0.9.34"
# We stay on 0.10.x because we want the `asm` feature, which was [removed][1] in 0.11.x.
# [1]: https://github.com/RustCrypto/hashes/pull/542
sha1 = { version = "0.10.6", features = ["asm"] }
snafu = "0.8.5"
syn = { version = "2.0.101", features = ["full"] }
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trybuild = "1.0.105"
url = "2.5.4"
uuid = "1.16.0"
v8 = "137.1.0"
xattr = "1.5.0"
zmq = { git = "https://github.com/clchiou/rust-zmq.git", branch = "patch" }

bittorrent_actor = { path = "bittorrent/actor" }
bittorrent_base = { path = "bittorrent/base" }
bittorrent_bencode = { path = "bittorrent/bencode" }
bittorrent_dht = { path = "bittorrent/dht" }
bittorrent_extension = { path = "bittorrent/extension" }
bittorrent_manager = { path = "bittorrent/manager" }
bittorrent_metainfo = { path = "bittorrent/metainfo" }
bittorrent_mse = { path = "bittorrent/mse" }
bittorrent_peer = { path = "bittorrent/peer" }
bittorrent_socket = { path = "bittorrent/socket" }
bittorrent_storage = { path = "bittorrent/storage" }
bittorrent_tracker = { path = "bittorrent/tracker" }
bittorrent_trackerless = { path = "bittorrent/trackerless" }
bittorrent_transceiver = { path = "bittorrent/transceiver" }
bittorrent_udp = { path = "bittorrent/udp" }
bittorrent_utp = { path = "bittorrent/utp" }

bt_base = { path = "bt/base" }
bt_bencode = { path = "bt/bencode" }
bt_dht_lookup = { path = "bt/dht/lookup" }
bt_dht_proto = { path = "bt/dht/proto" }
bt_dht_reqrep = { path = "bt/dht/reqrep" }
bt_dht_route = { path = "bt/dht/route" }
bt_metainfo = { path = "bt/metainfo" }
bt_serde = { path = "bt/serde" }
bt_serde_attribute = { path = "bt/serde/attribute" }
bt_udp = { path = "bt/udp" }

ddcache_client = { path = "ddcache/client" }
ddcache_client_raw = { path = "ddcache/client/raw" }
ddcache_client_service = { path = "ddcache/client/service" }
ddcache_peer = { path = "ddcache/peer" }
ddcache_rpc = { path = "ddcache/rpc" }
ddcache_server = { path = "ddcache/server" }
ddcache_storage = { path = "ddcache/storage" }

dkvcache_client = { path = "dkvcache/client" }
dkvcache_client_raw = { path = "dkvcache/client/raw" }
dkvcache_client_service = { path = "dkvcache/client/service" }
dkvcache_peer = { path = "dkvcache/peer" }
dkvcache_rpc = { path = "dkvcache/rpc" }
dkvcache_server = { path = "dkvcache/server" }
dkvcache_storage = { path = "dkvcache/storage" }

etcd_client = { path = "etcd/client" }
etcd_pubsub = { path = "etcd/pubsub" }
etcd_watch = { path = "etcd/watch" }

g1_actor = { path = "g1/actor" }
g1_actor_attribute = { path = "g1/actor/attribute" }
g1_base = { path = "g1/base" }
g1_base_derive = { path = "g1/base/derive" }
g1_base64 = { path = "g1/base64" }
g1_bytes = { path = "g1/bytes" }
g1_bytes_derive = { path = "g1/bytes/derive" }
g1_cache = { path = "g1/cache" }
g1_capnp = { path = "g1/capnp" }
g1_chrono = { path = "g1/chrono" }
g1_cli = { path = "g1/cli" }
g1_futures = { path = "g1/futures" }
g1_html = { path = "g1/html" }
g1_html_macro = { path = "g1/html/macro" }
g1_hyper = { path = "g1/hyper" }
g1_msg = { path = "g1/msg" }
g1_nix = { path = "g1/nix" }
g1_param = { path = "g1/param" }
g1_pool = { path = "g1/pool" }
g1_reqwest = { path = "g1/reqwest" }
g1_rusqlite = { path = "g1/rusqlite" }
g1_scraper = { path = "g1/scraper" }
g1_serde = { path = "g1/serde" }
g1_serde_json = { path = "g1/serde_json" }
g1_tokio = { path = "g1/tokio" }
g1_udp = { path = "g1/udp" }
g1_url = { path = "g1/url" }
g1_v8 = { path = "g1/v8" }
g1_web = { path = "g1/web" }
g1_yaml = { path = "g1/yaml" }
g1_zmq = { path = "g1/zmq" }

httpxd = { path = "httpxd" }
