[package]
name = "bittorrent_actor"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
linkme.workspace = true # Required by g1_param.
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_futures.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }
bittorrent_dht.workspace = true
bittorrent_manager.workspace = true
bittorrent_metainfo.workspace = true
bittorrent_peer.workspace = true
bittorrent_storage.workspace = true
bittorrent_tracker.workspace = true
bittorrent_trackerless.workspace = true
bittorrent_transceiver.workspace = true
bittorrent_udp.workspace = true
bittorrent_utp.workspace = true

[dev-dependencies]
clap.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }

bittorrent_base = { workspace = true, features = ["param", "parse"] }
