[package]
name = "bittorrent_base"
version.workspace = true
edition.workspace = true

[dependencies]
g1_base = { path = "../../g1/base" }

# feature: compact
bytes = { version = "1.4.0", optional = true }

# feature: cli, compact
snafu = { version = "0.7.4", optional = true }

# feature: param
linkme = { version = "0.3.10", optional = true }
rand = { version = "0.8.5", optional = true } # Required by peer_id.
serde = { version = "1.0.163", features = ["derive"], optional = true } # Required by peer_id.
g1_param = { path = "../../g1/param", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"

[features]
cli = ["dep:snafu"]
compact = ["dep:bytes", "dep:snafu"]
param = ["dep:linkme", "dep:rand", "dep:serde", "dep:g1_param"]
