[package]
name = "bittorrent_base"
version.workspace = true
edition.workspace = true

[dependencies]
g1_base = { path = "../../g1/base" }

# feature: compact
bytes = { version = "1.4.0", optional = true }

# feature: param
linkme = { version = "0.3.10", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.163", features = ["derive"], optional = true }
g1_param = { path = "../../g1/param", optional = true }

# feature: parse
lazy-regex = { version = "3.1.0", optional = true }
regex = { version = "1.10.3", optional = true } # Override the version set by lazy-regex.

# feature: compact, parse
snafu = { version = "0.7.4", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"

[features]
compact = ["dep:bytes", "dep:snafu"]
param = ["dep:linkme", "dep:rand", "dep:serde", "dep:g1_param"]
parse = ["dep:lazy-regex", "dep:regex", "dep:snafu"]
