[package]
name = "bittorrent_base"
version.workspace = true
edition.workspace = true

[dependencies]
g1_base.workspace = true

# feature: compact
bytes = { workspace = true, optional = true }

# feature: param
linkme = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
g1_param = { workspace = true, optional = true }

# feature: parse
lazy-regex = { workspace = true, optional = true }
regex = { workspace = true, optional = true } # Override the version set by lazy-regex.

# feature: compact, parse
snafu = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[features]
compact = ["dep:bytes", "dep:snafu"]
param = ["dep:linkme", "dep:rand", "dep:serde", "dep:g1_param"]
parse = ["dep:lazy-regex", "dep:regex", "dep:snafu"]
