[package]
name = "bittorrent_bencode"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
snafu.workspace = true

g1_base.workspace = true
g1_bytes.workspace = true

# feature: serde
paste = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes.workspace = true
g1_serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

# examples/bencode
clap.workspace = true
serde-transcode.workspace = true
serde_json.workspace = true
g1_serde.workspace = true

[features]
serde = ["dep:paste", "dep:serde", "dep:g1_serde"]
test_harness = []

[[example]]
name = "bencode"
required-features = ["serde"]
