[package]
name = "bittorrent_dht"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec = "1.0.1"
bytes = "1.4.0"
futures = "0.3.28"
linkme = "0.3.10" # Required by g1_param.
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
sha1 = { version = "0.10.5", features = ["asm"] }
snafu = "0.7.4"
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_msg = { path = "../../g1/msg" }
g1_param = { path = "../../g1/param" }

bittorrent_base = { path = "../base", features = ["compact"] }
bittorrent_bencode = { path = "../bencode", features = ["serde"] }

[dev-dependencies]
hex-literal = "0.4.1"

bittorrent_bencode = { path = "../bencode", features = ["serde", "test_harness"] }
