[package]
name = "bittorrent_dht"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bitvec.workspace = true
bytes.workspace = true
futures.workspace = true
linkme.workspace = true # Required by g1_param.
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
sha1.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_msg.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["compact"] }
bittorrent_bencode = { workspace = true, features = ["serde"] }

[dev-dependencies]
hex-literal.workspace = true

bittorrent_bencode = { workspace = true, features = ["serde", "test_harness"] }

# examples/dht
clap.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
g1_udp.workspace = true
bittorrent_base = { workspace = true, features = ["compact", "parse"] }
