[package]
name = "bittorrent_extension"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bytes.workspace = true
linkme.workspace = true # Required by g1_param.
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
snafu.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true

bittorrent_base = { workspace = true, features = ["compact"] }
bittorrent_bencode = { workspace = true, features = ["serde"] }

[dev-dependencies]
hex-literal.workspace = true

bittorrent_bencode = { workspace = true, features = ["serde", "test_harness"] }
