[package]
name = "bittorrent_manager"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.28"
linkme = "0.3.10" # Required by g1_param.
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_param = { path = "../../g1/param" }
g1_tokio = { path = "../../g1/tokio" }

bittorrent_base = { path = "../base", features = ["param"] }
bittorrent_mse = { path = "../mse" }
bittorrent_peer = { path = "../peer" }
bittorrent_socket = { path = "../socket" }
bittorrent_utp = { path = "../utp" }
