[package]
name = "bittorrent_manager"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
linkme.workspace = true # Required by g1_param.
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }
bittorrent_mse.workspace = true
bittorrent_peer.workspace = true
bittorrent_socket.workspace = true
bittorrent_utp.workspace = true
