[package]
name = "bittorrent_metainfo"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
sha1 = { version = "0.10.5", features = ["asm"] }
snafu = "0.7.4"

g1_base = { path = "../../g1/base" }

bittorrent_bencode = { path = "../bencode", features = ["serde"] }

[dev-dependencies]
bittorrent_bencode = { path = "../bencode", features = ["serde", "test_harness"] }

# examples/metainfo
clap = { version = "4.3.1", features = ["derive"] }
