[package]
name = "bittorrent_metainfo"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
sha1.workspace = true
snafu.workspace = true

g1_base.workspace = true

bittorrent_base.workspace = true
bittorrent_bencode = { workspace = true, features = ["serde"] }

[dev-dependencies]
bytes.workspace = true

bittorrent_bencode = { workspace = true, features = ["serde", "test_harness"] }

# examples/metainfo
clap.workspace = true

[features]
test_harness = []
