[package]
name = "bittorrent_mse"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.4.0"
cipher = "0.4.4"
crypto-bigint = { version = "0.5.2", features = ["generic-array", "zeroize"] }
linkme = "0.3.10" # Required by g1_param.
rand = "0.8.5"
rc4 = "0.1.0"
sha1 = { version = "0.10.5", features = ["asm"] }
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_param = { path = "../../g1/param" }
g1_tokio = { path = "../../g1/tokio" }

bittorrent_base = { path = "../base", features = ["param"] }

[dev-dependencies]
g1_tokio = { path = "../../g1/tokio", features = ["test_harness"] }
