[package]
name = "bittorrent_mse"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
cipher.workspace = true
crypto-bigint.workspace = true
linkme.workspace = true # Required by g1_param.
rand.workspace = true
rc4.workspace = true
sha1.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }

[dev-dependencies]
g1_tokio = { workspace = true, features = ["test_harness"] }
