[package]
name = "bittorrent_peer"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.4.0"
linkme = "0.3.10" # Required by g1_param.
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_param = { path = "../../g1/param" }
g1_tokio = { path = "../../g1/tokio" }

bittorrent_base = { path = "../base", features = ["param"] }
bittorrent_extension = { path = "../extension" }
bittorrent_socket = { path = "../socket" }

[dev-dependencies]
hex-literal = "0.4.1"

g1_tokio = { path = "../../g1/tokio", features = ["test_harness"] }

bittorrent_socket = { path = "../socket", features = ["test_harness"] }
