[package]
name = "bittorrent_peer"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
linkme.workspace = true # Required by g1_param.
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }
bittorrent_extension.workspace = true
bittorrent_socket.workspace = true

[dev-dependencies]
hex-literal.workspace = true

g1_tokio = { workspace = true, features = ["test_harness"] }

bittorrent_socket = { workspace = true, features = ["test_harness"] }
