[package]
name = "bittorrent_socket"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec.workspace = true
bytes.workspace = true
linkme.workspace = true # Required by g1_param.
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_bytes.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }

[dev-dependencies]
hex-literal.workspace = true

g1_tokio = { workspace = true, features = ["test_harness"] }

[features]
test_harness = []
