[package]
name = "bittorrent_storage"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bitvec.workspace = true
bytes.workspace = true
libc.workspace = true
sha1.workspace = true
snafu.workspace = true
tokio.workspace = true

g1_tokio.workspace = true

bittorrent_base.workspace = true
bittorrent_metainfo.workspace = true

[dev-dependencies]
hex-literal.workspace = true
tempfile.workspace = true

bittorrent_metainfo = { workspace = true, features = ["test_harness"] }

# examples/verify
clap.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
bittorrent_bencode = { workspace = true, features = ["serde"] }
