[package]
name = "bittorrent_tracker"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.4.0"
percent-encoding = "2.3.0"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0.163", features = ["derive"] }
snafu = "0.7.4"
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }

bittorrent_base = { path = "../base", features = ["compact"] }
bittorrent_bencode = { path = "../bencode", features = ["serde"] }
bittorrent_metainfo = { path = "../metainfo" }

[dev-dependencies]
hex-literal = "0.4.1"

bittorrent_bencode = { path = "../bencode", features = ["serde", "test_harness"] }
bittorrent_metainfo = { path = "../metainfo", features = ["test_harness"] }
