[package]
name = "bittorrent_tracker"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
linkme = "0.3.10" # Required by g1_param.
percent-encoding = "2.3.0"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0.163", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"

g1_base = { path = "../../g1/base" }
g1_param = { path = "../../g1/param" }
g1_tokio = { path = "../../g1/tokio" }

bittorrent_base = { path = "../base", features = ["compact", "param"] }
bittorrent_bencode = { path = "../bencode", features = ["serde"] }
bittorrent_metainfo = { path = "../metainfo" }

[dev-dependencies]
hex-literal = "0.4.1"

bittorrent_bencode = { path = "../bencode", features = ["serde", "test_harness"] }
bittorrent_metainfo = { path = "../metainfo", features = ["test_harness"] }

# examples/tracker
clap = { version = "4.3.1", features = ["derive"] }
g1_cli = { path = "../../g1/cli", features = ["param", "tracing"] }
