[package]
name = "bittorrent_tracker"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
linkme.workspace = true # Required by g1_param.
percent-encoding.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

g1_base.workspace = true
g1_param.workspace = true
g1_tokio.workspace = true

bittorrent_base = { workspace = true, features = ["compact", "param"] }
bittorrent_bencode = { workspace = true, features = ["serde"] }
bittorrent_metainfo.workspace = true

[dev-dependencies]
hex-literal.workspace = true

bittorrent_bencode = { workspace = true, features = ["serde", "test_harness"] }
bittorrent_metainfo = { workspace = true, features = ["test_harness"] }

# examples/tracker
clap.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
