[package]
name = "bittorrent_trackerless"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

bittorrent_base = { workspace = true, features = ["param"] }
bittorrent_bencode = { workspace = true, features = ["serde"] }
bittorrent_extension.workspace = true
bittorrent_manager.workspace = true
bittorrent_metainfo.workspace = true
bittorrent_peer.workspace = true

[dev-dependencies]
# examples/info
clap.workspace = true
g1_cli = { workspace = true, features = ["param", "tracing"] }
g1_futures.workspace = true
g1_udp.workspace = true
bittorrent_base = { workspace = true, features = ["param", "parse"] }
bittorrent_dht.workspace = true
bittorrent_udp.workspace = true
bittorrent_utp.workspace = true
